--- a/templates/dashboards/all_teacher_pages/teachers.html
+++ b/templates/dashboards/all_teacher_pages/teachers.html
@@ -33,7 +33,7 @@
             <li class="{%if request.path == select_class_attendance%}active{%else%}{%endif%}">
                 <a href="{% url 'select_class_attendance'%}">
                     <i class='bx bx-table' ></i>
-                    <span class="text">Attendance Record</span>
+                    <span class="text">Create Attendance</span>
                 </a>
             </li>
             <li class="{%if request.path == grade_student_nav%}active{%else%}{%endif%}">
