--- a/templates/dashboards/all_teacher_pages/attendance_month_detail.html
+++ b/templates/dashboards/all_teacher_pages/attendance_month_detail.html
@@ -18,17 +18,17 @@
                 <tr>
                     <th class="border border-zinc-400 bg-blue-200 p-1">STUDENT NAME</th>
                     {% for day, weekday_name in weekdays %}
-                    <th class="border border-zinc-400 bg-blue-200 p-1">{{ day }}</th>
+                    <th class="border border-zinc-400 bg-blue-200 p-2">{{ day }}</th>
                     {% endfor %}
                 </tr>
             </thead>
             <tbody>
                 {% for student in students %}
                     <tr>
-                        <td class="border border-zinc-400 p-1">{{ student }}</td>
+                        <td class="border border-zinc-400 p-2 ">{{ student }}</td>
                         {% with record=attendance_records|get_item:student.id %}
                             {% if record %}
-                                <td class="border border-gray-300 p-1">
+                                <td class="border border-gray-300 px-3 md:px-1">
                                     {% if record.status1 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status1 == "P" %}
@@ -39,7 +39,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status2 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status2 == "P" %}
@@ -50,7 +50,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status3 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status3 == "P" %}
@@ -61,7 +61,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status4 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status4 == "P" %}
@@ -72,7 +72,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status5 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status5 == "P" %}
@@ -83,7 +83,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status6 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status6 == "P" %}
@@ -94,7 +94,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status7 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status7 == "P" %}
@@ -105,7 +105,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status8 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status8 == "P" %}
@@ -116,7 +116,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status9 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status9 == "P" %}
@@ -127,7 +127,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status10 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status10 == "P" %}
@@ -138,7 +138,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status11 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status11 == "P" %}
@@ -149,7 +149,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status12 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status12 == "P" %}
@@ -160,7 +160,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status13 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status13 == "P" %}
@@ -171,7 +171,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status14 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status14 == "P" %}
@@ -182,7 +182,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status15 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status15 == "P" %}
@@ -193,7 +193,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status16 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status16 == "P" %}
@@ -204,7 +204,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status17 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status17 == "P" %}
@@ -215,7 +215,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status18 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status18 == "P" %}
@@ -226,7 +226,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status19 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status19 == "P" %}
@@ -237,7 +237,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status20 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status20 == "P" %}
@@ -248,7 +248,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status21 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status21 == "P" %}
@@ -259,7 +259,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status22 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status22 == "P" %}
@@ -270,7 +270,7 @@
                                             --
                                         {% endif %}
                                     </td>
-                                    <td class="border border-gray-300 p-1">
+                                    <td class="border border-gray-300 px-3 md:px-1">
                                         {% if record.status23 == "A" %}
                                             <i class="fa fa-times text-red-500"></i>
                                         {% elif record.status23 == "P" %}
@@ -282,7 +282,7 @@
                                         {% endif %}
                                     </td>
                             {% else %}
-                            <td class="border border-gray-300 p-1">
+                            <td class="border border-gray-300 px-3 md:px-1">
                                 <i class="fa fa-minus text-gray-500"></i> <!-- No record -->
                                 </td>
                             {% endif %}
@@ -293,6 +293,9 @@
         </table>
     </div>
 </div>
-   <a class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg mt-5"  href="{% url 'update_attendance' class_id=classes.id year=year month=month %}"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Update Attendance</span></a>
+<div>
+    <a class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg mt-5"  href="{% url 'update_attendance' class_id=classes.id year=year month=month %}"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Mark Attendance</span></a><br><br>
+    <a class="text-left py-2 px-3 my-3 font-normal text-white bg-red-500 rounded-lg mt-5"  href="{% url 'delete_attendance_record' class_id=classes.id year=year month=month %}"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Delete Attendance</span></a>
+</div>
 </div>
 {% endblock section %}
