--- a/templates/dashboards/all_admin_pages/classDetail.html
+++ b/templates/dashboards/all_admin_pages/classDetail.html
@@ -78,7 +78,7 @@
     </table>
 </div>
     </div>
-    <p class="text-right p-3 mt-3  font-normal text-white"><a href="{%url 'edit_class' class_id=class.id%}" class="bg-blue-500 p-3 rounded-lg"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Class</span></a></p>
-    <p class="text-right p-3 mt-3  font-normal text-white"><a href="{%url 'delete_class' class_id=class.id%}" class="bg-red-500 p-3 rounded-lg"><i class="fa-solid fa-trash-can fa-sm"></i> <span class="pl-1">Delete Class</span></a></p>
+    <p class="p-3 mt-3  font-normal text-white"><a href="{%url 'edit_class' class_id=class.id%}" class="bg-blue-500 p-3 rounded-lg"><i class="fa-regular fa-pen-to-square fa-sm"></i><span class="md:pl-1">Edit Class</span></a></p>
+    <p class="p-3 mt-3  font-normal text-white"><a href="{%url 'delete_class' class_id=class.id%}" class="bg-red-500 p-3 rounded-lg"><i class="fa-solid fa-trash-can fa-sm"></i> <span class="pl-1">Delete Class</span></a></p>
 </div>
 {%endblock section%}
