--- a/templates/dashboards/all_teacher_pages/mark_class.html
+++ b/templates/dashboards/all_teacher_pages/mark_class.html
@@ -3,7 +3,7 @@
 {% block section %}
 
 <div class="m-3 text-black rounded-lg">
-    <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">Choose Class To Grade Student</p>
+    <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">Choose Class To Mark Attendance</p>
     {% if messages %}
     {% for message in messages %}
     <h3 class="bg-blue-100 text-blue-500 p-3 text-normal font-normal mb-6">{{ message }}</h3>
@@ -12,7 +12,7 @@
     <ul class="grid grid-cols sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 text-center" >
         {%if classes%}
         {%for class in classes%}
-        <a href="{%url 'grade_student_list' class_id=class.id%}">
+        <a href="{%url 'Class_record_list' class_id=class.id %}">
             <li class="p-5 rounded-lg font-medium text-gray-700" style="background-color: #F9F9F9;">{{class.name}}</li>
         </a>
         {%endfor%}
