--- a/templates/administration/dashboard.html
+++ b/templates/administration/dashboard.html
@@ -17,28 +17,24 @@
                         </li>
                     </ul>
                 </div>
-                <a href="#" class="btn-download">
-                    <i class='bx bxs-cloud-download'></i>
-                    <span class="text">Download PDF</span>
-                </a>
             </div>
             <ul class="box-info">
                 <li>
-                    <i class='bx bxs-calendar-check'></i>
+                    <i class='bx bxs-user-rectangle'></i>
                     <span class="text">
                         <h3>{{all_teachers}}</h3>
                         <p>Total Teachers</p>
                     </span>
                 </li>
                 <li>
-                    <i class='bx bxs-group'></i>
+                    <i class='bx bxs-group' ></i>
                     <span class="text">
                         <h3>{{all_students}}</h3>
                         <p>Total Students</p>
                     </span>
                 </li>
                 <li>
-                    <i class='bx bxs-dollar-circle'></i>
+                    <i class='bx bxs-user-circle' ></i>
                     <span class="text">
                         <h3>{{all_users}}</h3>
                         <p>Total Users</p>
