--- a/templates/dashboards/all_student_pages/base.html
+++ b/templates/dashboards/all_student_pages/base.html
@@ -40,7 +40,7 @@
             </li>
             <li class="{%if request.path == view_class_attendance%} active {%else%}{%endif%}">
                 <a href="{%url 'view_class_attendance'%}">
-                    <i class='bx bxs-book-open' ></i>
+                    <i class='bx bxs-calendar-check'></i>
                     <span class="text">Attendance Record</span>
                 </a>
             </li>
@@ -68,7 +68,7 @@
             </li>
             <li class="{%if request.path == student_details_page%} active {%else%}{%endif%}">
             <a href="{{student_details_page}}">
-                <i class='bx bxs-book-reader' ></i>
+                <i class='bx bxs-user-circle' ></i>
                 <span class="text">My Profile</span>
             </a>
         </li>
