--- a/templates/dashboards/all_student_pages/my_report_card.html
+++ b/templates/dashboards/all_student_pages/my_report_card.html
@@ -4,8 +4,15 @@
 {% block section %}
 
 {% if student and grades and student_position_and_comment_view %}
-    <div class="bg-card rounded-lg shadow-md m-3 rounded-lg bg-white">
-        <div class="mb-6 text-white invisible">h</div>
+<div class="bg-card rounded-lg shadow-md m-3 rounded-lg bg-white">
+    <div class="mb-1 text-white invisible">h</div>
+    <div class="text-right mr-3">
+        <a href="{%url 'generate_pdf'%}" class="bg-blue-400 md:py-3 py-2 px-2 text-white rounded-lg">
+            <i class='bx bxs-cloud-download'></i>
+            <span class="text-right">Download PDF</span>
+        </a>
+    </div>
+    <div class="mb-1 text-white invisible">h</div>
         <div class="flex justify-center item-center w-full bg-blue-100">
             <div class="py-7 flex md:space-x-4 space-x-0">
                 <div>
