--- a/templates/dashboards/all_teacher_pages/base.html
+++ b/templates/dashboards/all_teacher_pages/base.html
@@ -53,7 +53,7 @@
             </li>
             <li class="{%if request.path == Choose_class_to_mark%}active{%else%}{%endif%}">
                 <a href="{% url 'Choose_class_to_mark'%}">
-                    <i class='bx bx-table' ></i>
+                    <i class='bx bxs-calendar-check'></i>
                     <span class="text">Mark Attendance</span>
                 </a>
             </li>
