--- a/templates/dashboards/all_admin_pages/base.html
+++ b/templates/dashboards/all_admin_pages/base.html
@@ -9,7 +9,7 @@
 {%url 'choose_class_timetable' as choose_class_timetable%}
 {%url 'subject_list' as subject_list%}
 {%url 'all_annoucement' as all_annoucement%}
-
+{%url 'view_attendance_class' as view_attendance_class%}
 
 
 <!-- SIDEBAR -->
@@ -53,6 +53,12 @@
                 <a href="{{subject_list}}">
                     <i class='bx bxs-book'></i>
                     <span class="text">Subject</span>
+                </a>
+            </li>
+            <li class="{% if request.path == view_attendance_class %}active{% endif %}">
+                <a href="{{view_attendance_class}}">
+                    <i class='bx bxs-calendar-check'></i>
+                    <span class="text">Attendance Record</span>
                 </a>
             </li>
         </ul>
