--- a/templates/dashboards/all_teacher_pages/edit_record.html
+++ b/templates/dashboards/all_teacher_pages/edit_record.html
@@ -14,8 +14,8 @@
         <thead>
             <tr>
                 <th class="border border-zinc-400 bg-blue-200 p-1">STUDENT NAME</th>
-                {% for day, weekday_name in weekdays %}
-                <th class="border border-zinc-400 bg-blue-200 p-1">{{ day }} </th>
+                {% for day, weekday in weekdays %}
+                <th class="border border-zinc-400 bg-blue-200 p-1">{{ weekday }}<br>{{ day }}</th>
                 {% endfor %}
             </tr>
         </thead>
